# docs/openapi/api-external-web-cittadino.yaml
@@ -27,9 +27,17 @@ paths:
         '200':
           description: ok
           content:
-            text/html: {}
+            application/json:
+              schema:
+                $ref: '#/components/schemas/NewSupportResponse'
         '400':
           description: Invalid input
+          content:
+            application/problem+json:
+              schema:
+                $ref: '#/components/schemas/Problem'
+        '403':
+          description: Forbidden
           content:
             application/problem+json:
               schema:
@@ -51,6 +59,21 @@ components:
           type: string
           pattern: ^([a-zA-Z0-9]+(?:[.\-_][a-zA-Z0-9]+){0,10}@[a-zA-Z0-9]+(?:[.-][a-zA-Z0-9]+){0,10}(?:\.[a-zA-Z0-9]{2,10}))$
           maxLength: 320
+    NewSupportResponse:
+      required:
+        - action_url
+        - jwt
+        - return_to
+      properties:
+        action_url:
+          description: url dove eseguire azione di accesso
+          type: string
+        jwt:
+          description: JWT zendesk
+          type: string
+        return_to:
+          description: url servizio di assistenza
+          type: string
     Problem:
       properties:
         type:
